deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp-container
          image: srinivas83/docker-acr-26:latest
          ports:
            - containerPort: 8080
          # Add other configuration like environment variables, volumes, etc.
